Committing main article file csmKO

--- a/sample.tex
+++ b/sample.tex
@@ -12,7 +12,7 @@ CSM-05-000 v1.22 --- \today}
 \maketitle
 \CSMsetup
 
-
+Modeling of large-scale stochastic phenomena with both spatial and temporal (spatiotemporal) evolution is a fundamental problem in the applied sciences.
 \section{Introduction}
 
 The IEEE Control Systems Magazine is not a journal in the usual sense.
